<resources>
    <string name="app_name" translatable="false">Troutoss</string>
    <string name="settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="cb_scheme" translatable="false">troutoss</string>
    <string name="mastodon_cb_host" translatable="false">mastodon_cb</string>
    <string name="hint_mastodon_instance">mastodon.social</string>
    <string name="input_instance">Instance</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed.\nPlease check the instance.</string>
    <string name="mastodon_home_title_long">Home\n%1$s</string>
    <string name="mastodon_home_title_short">Home@%1$s</string>
    <string name="mastodon_notifications_title_long">Notifications\n%1$s</string>
    <string name="mastodon_notifications_title_short">Notifications@%1$s</string>
    <string name="mastodon_favourites_title_long">Favourites\n%1$s</string>
    <string name="mastodon_favourites_title_short">Favourites@%1$s</string>
    <string name="mastodon_local_title">Local@%1$s</string>
    <string name="mastodon_federated_title">Federated@%1$s</string>
    <string name="mastodon_boost_by">%1$s boosted</string>
    <string name="mastodon_boost_by_with_time">%1$s boosted %2$s</string>
    <string name="mastodon_favourite_by">%1$s favourited</string>
    <string name="mastodon_follow_by">%1$s followed you</string>
    <string name="comm_error">Communication failed.\nPlease try again after a while.</string>
    <string name="load_image_error">Failed to load image.\nPlease try again after a while.</string>
    <string name="status_now">now</string>
    <string name="sensitive_content">Sensitive content\nClick to view</string>
    <string name="video_content">Click to play</string>
    <string name="unknown_content">Unknown content\nClick to open</string>
    <string name="post">Post</string>
    <string name="post_success">Posted.</string>
    <string name="visibility_public">Public：Post to public timelines</string>
    <string name="visibility_unlisted">Unlisted:Do not post to public timelines</string>
    <string name="visibility_private">Private：Post to followers only</string>
    <string name="visibility_direct">Direct：Post to mentioned users only</string>
    <string name="cancel">Cancel</string>
    <string name="status_hint">What is on your mind?</string>
    <string name="toot">Toot!</string>
    <string name="nsfw" translatable="false">NSFW</string>
    <string name="content_warning">Content warning</string>
    <string name="cw" translatable="false">CW</string>
    <string name="attachment_media" translatable="false">Attachment media</string>
    <string name="select_visibility" translatable="false">Select visibility</string>
    <string name="drawer_open" translatable="false">open drawer</string>
    <string name="drawer_close" translatable="false">close drawer</string>
    <string name="tab_customize">Customize tab</string>
    <string name="add_account">Add account</string>
    <string name="about_this_app">About this app</string>
    <string name="copyright" translatable="false">Copyright 2017 tomoya0x00. All rights reserved.</string>
    <string name="copyright_notice">Copyright notice</string>
    <string name="version">Version</string>
    <string name="oss_license">Open Source Licenses</string>
    <string name="addAppId" translatable="false">ca-app-pub-6081758982341230~3908408707</string>
    <string name="show_more">SHOW MORE</string>
    <string name="notifications">Notifications</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="local">Local</string>
    <string name="federated">Federated</string>
    <string name="users_settings">Users settings</string>
    <string name="muted_users">Muted users</string>
    <string name="blocked_users">Blocked users</string>
    <string name="other">Other</string>
    <string name="Logout">Logout</string>
    <string name="account_settings">Account settings</string>
    <string name="logout_and_delete_tabs">Logged out.\nDeleted tabs of the account.</string>
    <string name="logged_in_account_error">This account is already logged in.\nIf you want to add another account of the same instance, please log out of the instance by web browser, and try again.</string>
    <string name="login_and_add_tabs">Log in Successful.\nAdded tabs of the account.</string>
    <string name="attach_both_video_image_error">Video and images can not be attached together.</string>
    <string name="attach_permission_denied_error">Attachment failed.</string>

    <string name="pref_key_mastodon_muted_users" translatable="false">pref_key_mastodon_muted_users</string>
    <string name="pref_key_mastodon_blocked_users" translatable="false">pref_key_mastodon_blocked_users</string>
    <string name="pref_key_mastodon_logout" translatable="false">pref_key_mastodon_logout</string>
    <string name="take_photo" translatable="false">Take Photo</string>
    <string name="permission_required">Permission Required</string>
    <string name="storage_permission_required">Necessary to grant the storage permission to this app on the Settings.</string>
    <string name="mute">Mute</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="delete_toot">Delete this toot.\nAre you sure？</string>
    <string name="deleted">Deleted.</string>
    <string name="delete_failed">Delete failed.</string>
    <string name="muted">Muted.</string>
    <string name="mute_failed">Mute failed.</string>
    <string name="blocked">Blocked.</string>
    <string name="block_failed">Block failed.</string>
    <string name="report_hint">Additional comments</string>
    <string name="reported">Reported.</string>
    <string name="report_failed">Report failed.</string>
    <string name="ssl_handshake_error">SSL communication failure.\nYour device may not support this instance.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="mastodon" translatable="false">Mastodon</string>
    <string name="pref_key_add_mastodon_home" translatable="false">pref_key_add_mastodon_home</string>
    <string name="pref_key_add_mastodon_local" translatable="false">pref_key_add_mastodon_local</string>
    <string name="pref_key_add_mastodon_federated" translatable="false">pref_key_add_mastodon_federated</string>
    <string name="pref_key_add_mastodon_notifications" translatable="false">pref_key_add_mastodon_notifications</string>
    <string name="pref_key_add_mastodon_favourite" translatable="false">pref_key_add_mastodon_favourite</string>
    <string name="select_add_tab_type">Select add tab</string>
    <string name="select_account">Select account</string>
    <string name="rename">Rename</string>
    <string name="reset_name">Reset name</string>
    <string name="close">Close</string>
    <string name="confirm_close_tab_customize">Do you want to close without saving changes?\nYou can save changes to press check mark at the top.</string>
    <string name="search">Search</string>
    <string name="mastodon_search_hint">Search from %1$s</string>

    <plurals name="status_second">
        <item quantity="one">%1$d second ago</item>
        <item quantity="other">%1$d seconds ago</item>
    </plurals>
    <plurals name="status_minute">
        <item quantity="one">%1$d minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>
    <plurals name="status_hour">
        <item quantity="one">%1$d hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>
    <plurals name="status_day">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>

</resources>
