<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MastodonAuthActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15"/>

        <android.support.constraint.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85"/>

        <EditText
            android:id="@+id/instance_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mastodon_instance"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/left_guideline"
            app:layout_constraintRight_toLeftOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.30"/>

        <TextView
            android:id="@+id/instance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/input_instance"
            app:layout_constraintBottom_toTopOf="@+id/instance_edit"
            app:layout_constraintLeft_toRightOf="@id/left_guideline"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintLeft_toRightOf="@id/left_guideline"
            app:layout_constraintRight_toLeftOf="@id/right_guideline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/instance_edit"/>

    </android.support.constraint.ConstraintLayout>
</layout>
