<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="jp.gr.java_conf.miwax.troutoss.viewmodel.MainViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <jp.gr.java_conf.miwax.troutoss.view.widget.DrawableCompatTextView
            android:id="@+id/subtitle"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="16dp"
            android:gravity="start|center"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:drawableLeftCompat="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/account_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/add_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle"/>

        <jp.gr.java_conf.miwax.troutoss.view.widget.DrawableCompatTextView
            android:id="@+id/add_account"
            style="@style/DrawerButton"
            android:onClick="@{viewModel.onClickAddAccount}"
            android:text="@string/add_account"
            app:drawableLeftCompat="@drawable/add"
            app:layout_constraintBottom_toTopOf="@+id/account_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/account_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/settings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <jp.gr.java_conf.miwax.troutoss.view.widget.DrawableCompatTextView
            android:id="@+id/settings"
            style="@style/DrawerButton"
            android:onClick="@{viewModel::onClickSettings}"
            android:text="@string/settings"
            app:drawableLeftCompat="@drawable/settings"
            app:layout_constraintBottom_toTopOf="@+id/tab_customize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <jp.gr.java_conf.miwax.troutoss.view.widget.DrawableCompatTextView
            android:id="@+id/tab_customize"
            style="@style/DrawerButton"
            android:text="@string/tab_customize"
            app:drawableLeftCompat="@drawable/tab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>