<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="jp.gr.java_conf.miwax.troutoss.viewmodel.PostStatusViewModel"/>

        <import type="android.view.View"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jp.gr.java_conf.miwax.troutoss.view.activity.PostStatusActivity">

        <View
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_corner_shape"
            app:layout_constraintBottom_toTopOf="@+id/post"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cw_edit"/>

        <EditText
            android:id="@+id/status_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/status_hint"
            android:onTextChanged="@{viewModel::onStatusChanged}"
            android:text="@={viewModel.status}"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/status_media"
            app:layout_constraintLeft_toLeftOf="@id/status"
            app:layout_constraintRight_toRightOf="@id/status"
            app:layout_constraintTop_toBottomOf="@+id/cw_edit"
            app:selection="@{viewModel.statusCursor}"
            tools:text="status">

            <requestFocus/>

        </EditText>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/status_media"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:visibility="@{viewModel.hasAttachments ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/post"
            app:layout_constraintLeft_toLeftOf="@id/status"
            app:layout_constraintRight_toRightOf="@id/status"
            app:layout_constraintTop_toBottomOf="@id/status_edit"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/accounts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cw_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/post"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:enabled="@{viewModel.postable}"
            android:onClick="@{viewModel::onClickPost}"
            android:text="@string/toot"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status"/>

        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{viewModel.statusCount}"
            android:textColor="@{viewModel.statusCountColor}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/post"
            app:layout_constraintTop_toBottomOf="@id/status"
            tools:text="500"/>

        <ImageButton
            android:id="@+id/media"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/post_button"
            android:layout_height="@dimen/post_button"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/attachment_media"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status"
            app:srcCompat="@drawable/camera"/>

        <ImageButton
            android:id="@+id/visibility"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/post_button"
            android:layout_height="@dimen/post_button"
            android:contentDescription="@string/select_visibility"
            android:onClick="@{viewModel::onClickVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/media"
            app:layout_constraintTop_toBottomOf="@id/status"
            app:srcCompat="@{viewModel.visibilityIcon}"/>

        <ToggleButton
            android:id="@+id/cw"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/post_button"
            android:layout_height="@dimen/post_button"
            android:checked="@={viewModel.spoiler}"
            android:padding="0dp"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/cw"
            android:textOn="@string/cw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/nsfw"
            app:layout_constraintTop_toBottomOf="@id/status"/>

        <EditText
            android:id="@+id/cw_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_corner_shape"
            android:hint="@string/content_warning"
            android:padding="8dp"
            android:text="@={viewModel.spoilerText}"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey"
            android:visibility="@{viewModel.spoiler ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/status"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accounts"
            tools:text="spoiler"/>

        <ToggleButton
            android:id="@+id/nsfw"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/post_button"
            android:layout_height="@dimen/post_button"
            android:padding="0dp"
            android:textColor="@drawable/toggle_text_color"
            android:textOff="@string/nsfw"
            android:textOn="@string/nsfw"
            android:visibility="@{viewModel.hasAttachments ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/visibility"
            app:layout_constraintTop_toBottomOf="@id/status"/>

    </android.support.constraint.ConstraintLayout>
</layout>